# oirunner

./: .coveragerc  .travis.yml  Makefile  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: black.yml  ci.yml
oirunner/: __init__.py  priorimage.py  runbsmem.py
oirunner/makesf/: __main__.py
tests/: __init__.py  gauss10.fits  test_makesf.py  test_priorimage.py  test_runbsmem.py
