[metadata]
name = oirunner
summary = Tool to reconstruct images from optical interferometric data using BSMEM 
license = GPLv2
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/jsy1001/oirunner
author = John Young
author_email = jsy1001@cam.ac.uk
classifier =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
project_urls =
    Bug Reports = https://github.com/jsy1001/oirunner/issues

[files]
packages =
    oirunner
